   Also select() (Windows) and poll() pollers have been rewritten resulting in
   pyftpdlib being an order of magnitude faster and more scalable than ever.

 * Issue 204: a new FilesystemError exception class is available in order send
   custom error strings to client from an AbstracteFS subclass.

 * Issue 207: added on_connect() and on_disconnect() callback methods to
   FTPHandler class.

Bugfixes:

 * Issue 131: IPv6 dual-stack support was broken.

 * Issue 206: can't change directory (CWD) when using UnixAuthorizer and process
   cwd is == "/root".

 * Issue 211: pyftpdlib doesn't work if deprecated py-sendfile 1.2.4 module is
   installed.

New APIs:

 * pyftpdlib.ftpserver.FilesystemError exception class.
 * pyftpdlib.ftpserver.FTPHandler's on_connect() and on_disconnect() callbacks.
 * pyftpdlib.ftpserver's FTPServer, FTPHandler, DTPHandler new ioloop attribute.
 * pyftpdlib.lib.ioloop.IOLoop class (not supposed to be used directly)

Incompatible API changes:

 * Unicode is now used instead of bytes pretty much everywhere.

 * FTPHandler.__init__() and TLS_FTPHandler.__init__() signatures have changed:
     - __init__(conn, server)
     + __init__(conn, server, ioloop=None)

 * FTPServer.server_forever() signature has changed:
     - serve_forever(timeout=1.0, use_poll=False, count=None)
     + serve_forever(timeout=1.0, blocking=True)

 * FTPServer.close_all() signature has changed:
     - close_all(ignore_all=False)
     + close_all()

 * FTPServer.server_forever() and FTPServer.close_all() are no longer class
   methods (XXX still not sure)

 * asyncore.dispatcher and asynchat.async_chat classes has been replaced by:
     - pyftpdlib.lib.ioloop.Acceptor
     - pyftpdlib.lib.ioloop.Connector
     - pyftpdlib.lib.ioloop.AsyncChat
   Any customization relying on asyncore or its IO loop will no longer work.

 * pyftpdlib.ftpserver.CallLater and pyftpdlib.ftpserver.CallEvery are